--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,11 +1,13 @@
 ---
 import Layout from '../layouts/Layout.astro';
 import ReadPDF from '../components/ReadPDF.vue';
-import Comments from '../components/comments.vue'
+import Comments from '../components/Comments.vue';
+import UploadPDF from '../components/UploadPDF.vue';
 ---
 
 <Layout title="Welcome to Astro.">
 	<main>
+		<UploadPDF client:load />
 		<div class="grid grid-cols-12">
 			<!-- <div class="col-span-3">
 				pdf一覧
