--- a/src/pages/manage.astro
+++ b/src/pages/manage.astro
@@ -10,3 +10,15 @@ import UploadPDF from "../components/UploadPDF.vue";
         <Folder client:load /> 
     </main>
 </Layout>
+
+<script>
+    import { auth } from '../firebase/firestore'
+	import { onAuthStateChanged } from 'firebase/auth'
+	onAuthStateChanged(auth, (user) => {
+		if (!user) window.location.href = "/login"
+		else {
+			const event = new CustomEvent('userAuth', { detail: true });
+		    document.dispatchEvent(event);
+		}
+	})
+</script>
