--- a/src/pages/login.astro
+++ b/src/pages/login.astro
@@ -1,13 +1,15 @@
 ---
 import Layout from '../layouts/Layout.astro'
-import Login from '../components/Login.vue'
+import LoginVue from '../components/Login.vue'
+let isSineUp = false
+
 ---
 <Layout title="login">
     <div class="h-screen w-screen flex justify-center items-center">
-        <Login client:load />
+        <LoginVue client:load />
     </div>
 </Layout>
-
+    
 <script>
-
+    
 </script>
