--- a/src/pages/pdf.astro
+++ b/src/pages/pdf.astro
@@ -1,16 +1,16 @@
 ---
 import Layout from '../layouts/Layout.astro';
 import Comments from '../components/Comments.vue';
-import PDFjs from '../components/pdfjs.vue';
+import PDFjs from '../components/PDFjs.vue';
 ---
 
 <Layout title="Welcome to Astro.">
 	<main>
-		<div class="w-4/5">
+		<div class="w-4/5 ml-10">
 			<!-- <div class="col-span-3">
 				pdf一覧
 			</div> -->
-			<div class="h-3">
+			<div class="">
 				<PDFjs client:load />
 			</div>
 		</div>
@@ -22,23 +22,11 @@ import PDFjs from '../components/pdfjs.vue';
 	</main>
 </Layout>
 
-<script>
-	import { auth } from '../firebase/firestore'
-	import { onAuthStateChanged } from 'firebase/auth'
-	onAuthStateChanged(auth, (user) => {
-		if (!user) window.location.href = "/login"
-		else {
-			const event = new CustomEvent('userAuth', { detail: true });
-		    document.dispatchEvent(event);
-		}
-	})
-</script>
-
 <style>
 	main {
 		margin: auto;
-		padding: 1rem;
-		margin-top: 80px;
+		padding: 0.5rem;
+		margin-top: 50px;
 		color: white;
 		font-size: 20px;
 		line-height: 1.6;
