--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -5,7 +5,7 @@ interface Props {
 
 const { title } = Astro.props;
 
-import SignButton from '../components/SignButton.vue';
+//import SignButton from '../components/SignButton.vue';
 ---
 
 <!DOCTYPE html>
@@ -21,18 +21,18 @@ import SignButton from '../components/SignButton.vue';
 	<body>
 
 <nav class="fixed w-full z-20 top-0 left-0 bg-gradient-to-b from-pink-500">
-	<div class="max-w-screen-xl flex items-center justify-between mx-auto p-4">
-	<a href="https://aideaman.com/" class="flex items-center">
+	<div class="max-w-screen-xl flex items-center justify-between mx-auto p-2">
+	<a href="/" class="flex items-center">
 		<img src="/logo.png" class="h-8 mr-3" alt="AIdeaman Logo">
 		<h1 class="text-white">Aideaman <span class="text-gradient">PDF</span></h1>
 	</a>
-	<a href="/" class="flex items-start">
+	<!-- <a href="/" class="flex items-start">
 		<h2 class="text-white">ホーム</h2>
 	</a>
 	<a href="/manage" class="flex items-start">
 		<h1 class="text-white">管理</h1>
 	</a>
-	<SignButton client:load />
+	<SignButton client:load /> -->
 	</div>
   </nav>
 		<slot />
